--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -19,7 +19,7 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:windowsBuild] %>/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:windowsBuild] %>.msi</a>
+<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:windowsBuild] %>.msi</a>
 </div>
 
 <div class="arc_linux">
