--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -62,6 +62,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.0.4
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.zip">.zip</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.tgz">.tgz</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.0.3
   (<a href="https://github.com/sbt/sbt/releases/download/v1.0.3/sbt-1.0.3.zip">.zip</a>)
   (<a href="https://github.com/sbt/sbt/releases/download/v1.0.3/sbt-1.0.3.tgz">.tgz</a>)
