--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -101,7 +101,14 @@ sudo yum install sbt
 <h4>0.13</h4>
 <ul>
 <li>
-  sbt 0.13.16 
+  sbt 0.13.17
+  (<a href="https://github.com/sbt/sbt/releases/download/v0.13.17/sbt-0.13.17.zip">.zip</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v0.13.17/sbt-0.13.17.tgz">.tgz</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v0.13.17/sbt-0.13.17.msi">.msi</a>)
+</li>
+
+<li>
+  sbt 0.13.16
   (<a href="https://cocl.us/sbt-0.13.16.zip">.zip</a>)
   (<a href="https://cocl.us/sbt-0.13.16.tgz">.tgz</a>)
   (<a href="https://cocl.us/sbt-0.13.16.msi">.msi</a>)
