--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -62,6 +62,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.1.2
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.2/sbt-1.1.2.zip">.zip</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.2/sbt-1.1.2.tgz">.tgz</a>)
+  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.2/sbt-1.1.2.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.1.1
   (<a href="https://github.com/sbt/sbt/releases/download/v1.1.1/sbt-1.1.1.zip">.zip</a>)
   (<a href="https://github.com/sbt/sbt/releases/download/v1.1.1/sbt-1.1.1.tgz">.tgz</a>)
