Move download links for 1.x to IBM Cloud in the download page

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -19,7 +19,7 @@ $ port install sbt
 <div class="arc_windows">
 <h2>Windows</h2>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:windowsBuild] %>.msi</a>
+<a href="https://piccolo.link/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:windowsBuild] %>.msi</a>
 </div>
 
 <div class="arc_linux">
@@ -51,9 +51,9 @@ sudo yum install sbt
 <div class="arc_all">
 <h2>All platforms</h2>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
+<a href="https://piccolo.link/sbt-<%= @config[:sbtVersion] %>.zip" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.zip</a>
 
-<a href="https://github.com/sbt/sbt/releases/download/v<%= @config[:sbtVersion] %>/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
+<a href="https://piccolo.link/sbt-<%= @config[:sbtVersion] %>.tgz" class="btn" role="button">sbt-<%= @config[:sbtVersion] %>.tgz</a>
 </div>
 
 <h3>Previous releases</h3>
@@ -63,58 +63,58 @@ sudo yum install sbt
 
 <li>
   sbt 1.1.2
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.2/sbt-1.1.2.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.2/sbt-1.1.2.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.2/sbt-1.1.2.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.1.2.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.1.2.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.1.2.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.1.1
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.1/sbt-1.1.1.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.1/sbt-1.1.1.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.1/sbt-1.1.1.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.1.1.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.1.1.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.1.1.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.1.0
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.0/sbt-1.1.0.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.0/sbt-1.1.0.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.1.0/sbt-1.1.0.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.1.0.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.1.0.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.1.0.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.0.4
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.4/sbt-1.0.4.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.0.4.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.0.4.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.0.4.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.0.3
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.3/sbt-1.0.3.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.3/sbt-1.0.3.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.3/sbt-1.0.3.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.0.3.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.0.3.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.0.3.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.0.2
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.2/sbt-1.0.2.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.2/sbt-1.0.2.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.2/sbt-1.0.2.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.0.2.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.0.2.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.0.2.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.0.1
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.1/sbt-1.0.1.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.1/sbt-1.0.1.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.1/sbt-1.0.1.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.0.1.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.0.1.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.0.1.msi">.msi</a>)
 </li>
 
 <li>
   sbt 1.0.0
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.0/sbt-1.0.0.zip">.zip</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.0/sbt-1.0.0.tgz">.tgz</a>)
-  (<a href="https://github.com/sbt/sbt/releases/download/v1.0.0/sbt-1.0.0.msi">.msi</a>)
+  (<a href="https://piccolo.link/sbt-1.0.0.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.0.0.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.0.0.msi">.msi</a>)
 </li>
 
 </ul>
