--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -62,6 +62,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.1.4
+  (<a href="https://piccolo.link/sbt-1.1.4.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.1.4.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.1.4.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.1.2
   (<a href="https://piccolo.link/sbt-1.1.2.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-1.1.2.tgz">.tgz</a>)
