--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -63,6 +63,20 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.1.6
+  (<a href="https://piccolo.link/sbt-1.1.6.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.1.6.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.1.6.msi">.msi</a>)
+</li>
+
+<li>
+  sbt 1.1.5
+  (<a href="https://piccolo.link/sbt-1.1.5.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.1.5.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.1.5.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.1.4
   (<a href="https://piccolo.link/sbt-1.1.4.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-1.1.4.tgz">.tgz</a>)
