--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -63,6 +63,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.2.0
+  (<a href="https://piccolo.link/sbt-1.2.0.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.2.0.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.2.0.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.1.6
   (<a href="https://piccolo.link/sbt-1.1.6.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-1.1.6.tgz">.tgz</a>)
