--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -63,6 +63,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.2.4
+  (<a href="https://piccolo.link/sbt-1.2.4.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.2.4.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.2.4.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.2.3
   (<a href="https://piccolo.link/sbt-1.2.3.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-1.2.3.tgz">.tgz</a>)
