download page: add sbt 0.13.18

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -193,6 +193,13 @@ sudo yum install sbt
 <h4>0.13</h4>
 <ul>
 <li>
+  sbt 0.13.18
+  (<a href="https://piccolo.link/sbt-0.13.18.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-0.13.18.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-0.13.18.msi">.msi</a>)
+</li>
+
+<li>
   sbt 0.13.17
   (<a href="https://piccolo.link/sbt-0.13.17.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-0.13.17.tgz">.tgz</a>)
