--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -63,6 +63,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.3.0-RC1
+  (<a href="https://piccolo.link/sbt-1.3.0-RC1.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.3.0-RC1.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.3.0-RC1.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.2.8
   (<a href="https://piccolo.link/sbt-1.2.8.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-1.2.8.tgz">.tgz</a>)
