--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -63,10 +63,10 @@ sudo yum install sbt
 <ul>
 
 <li>
-  sbt 1.3.0-RC1
-  (<a href="https://piccolo.link/sbt-1.3.0-RC1.zip">.zip</a>)
-  (<a href="https://piccolo.link/sbt-1.3.0-RC1.tgz">.tgz</a>)
-  (<a href="https://piccolo.link/sbt-1.3.0-RC1.msi">.msi</a>)
+  sbt 1.3.0
+  (<a href="https://piccolo.link/sbt-1.3.0.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.3.0.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.3.0.msi">.msi</a>)
 </li>
 
 <li>
