Update links to Homebrew

--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -8,7 +8,7 @@ title: Download
 
 <h3>Homebrew</h3>
 <pre>
-$ brew install sbt@1
+$ brew install sbt
 </pre>
 
 <h3>Macports (Third-party package)</h3>
