--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -4,16 +4,16 @@ title: Download
 ---
 
 <div class="arc_mac">
-<h2>Mac</h2>
+<h2>macOS</h2>
 
 <h3>Homebrew</h3>
 <pre>
 $ brew install sbt
 </pre>
 
-<h3>Macports (Third-party package)</h3>
+<h3>SDKMAN!</h3>
 <pre>
-$ port install sbt
+$ sdk install sbt
 </pre>
 </div>
 
