--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -21,6 +21,12 @@ $ sdk install sbt
 <h2>Windows</h2>
 
 <a href="https://piccolo.link/sbt-<%= @config[:windowsBuild] %>.msi" class="btn" role="button">sbt-<%= @config[:windowsBuild] %>.msi</a>
+
+<h3>Scoop</h3>
+<pre>
+> scoop install sbt
+</pre>
+
 </div>
 
 <div class="arc_linux">
