--- a/src/nanoc/content/download.html
+++ b/src/nanoc/content/download.html
@@ -69,6 +69,13 @@ sudo yum install sbt
 <ul>
 
 <li>
+  sbt 1.3.3
+  (<a href="https://piccolo.link/sbt-1.3.3.zip">.zip</a>)
+  (<a href="https://piccolo.link/sbt-1.3.3.tgz">.tgz</a>)
+  (<a href="https://piccolo.link/sbt-1.3.3.msi">.msi</a>)
+</li>
+
+<li>
   sbt 1.3.2
   (<a href="https://piccolo.link/sbt-1.3.2.zip">.zip</a>)
   (<a href="https://piccolo.link/sbt-1.3.2.tgz">.tgz</a>)
